@@ -1,3 +1,7 @@
+2005-10-22  Julio Sanchez  <jsanchez@users.sourceforge.net>
+	* src/WriteGedcom.py: Media objects for families, preparation for 
+	media objects for other entities
+
 2005-10-20  Don Allingham  <don@gramps-project.org>
 	* src/plugins/DetDescendantReport.py: bring in line with 
 	DetAncestralReport
